--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
             <div class="col-md-6 col-md-offset-3 text-center">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        <a href="">
+                        <a href="lit_paper.pdf">
                             <img src="assets/paper_image.jpg" height="60px" style="display: block; margin: 0 auto;">
-                            <h4><strong>Paper (Coming Soon)</strong></h4>
+                            <h4><strong>Paper</strong></h4>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://github.com/yxlao/lit">
                             <img src="assets/github.png" height="60px" style="display: block; margin: 0 auto;">
-                            <h4><strong>Code (Coming Soon)</strong></h4>
+                            <h4><strong>Code</strong></h4>
                         </a>
                     </li>
                 </ul>
