update link to camtools

--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
                     Source code and demos are available at: <a
                         href="https://yxlao.github.io/lit">https://yxlao.github.io/lit</a>.
                 </p>
+                <p align="right">
+                    <a href="https://github.com/yxlao/camtools"><img alt="Built with CamTools"
+                            src="https://raw.githubusercontent.com/yxlao/camtools/master/camtools/assets/built_with_camtools_light.svg"
+                            width=240></a>
+                </p>
             </div>
         </div>
 
